--- a/Project Files/src/FXMLs/selectPlayerMenu.fxml
+++ b/Project Files/src/FXMLs/selectPlayerMenu.fxml
@@ -26,22 +26,22 @@
       </ImageView>
       <ImageView fitHeight="130.0" fitWidth="500.0" layoutX="262.0" layoutY="285.0" pickOnBounds="true" scaleY="2.0">
          <image>
-            <Image url="@../../../../../../Downloads/IMGBIN_placard-plywood-frame-and-panel-sanctuaire-la-ferme-de-doudou-png_tVeskGfv%20(3).png" />
+            <Image url="@../images/selectPlayer_B.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="130.0" fitWidth="500.0" layoutX="262.0" layoutY="403.0" pickOnBounds="true" scaleY="2.0">
          <image>
-            <Image url="@../../../../../../Downloads/IMGBIN_placard-plywood-frame-and-panel-sanctuaire-la-ferme-de-doudou-png_tVeskGfv%20(4).png" />
+            <Image url="@../images/playGuest_B.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="130.0" fitWidth="500.0" layoutX="262.0" layoutY="520.0" pickOnBounds="true" scaleY="2.0">
          <image>
-            <Image url="@../../../../../../Downloads/IMGBIN_placard-plywood-frame-and-panel-sanctuaire-la-ferme-de-doudou-png_tVeskGfv%20(5).png" />
+            <Image url="@../images/createPlayer_B.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="130.0" fitWidth="500.0" layoutX="262.0" layoutY="635.0" pickOnBounds="true" scaleY="2.0">
          <image>
-            <Image url="@../../../../../../Downloads/IMGBIN_placard-plywood-frame-and-panel-sanctuaire-la-ferme-de-doudou-png_tVeskGfv%20(6).png" />
+            <Image url="@../images/exitGame_B.png" />
          </image>
       </ImageView>
    </children>
