--- a/Project Files/src/FXMLs/Level.fxml
+++ b/Project Files/src/FXMLs/Level.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.effect.GaussianBlur?>
 <?import javafx.scene.image.Image?>
@@ -24,19 +25,25 @@
             <Blend />
          </effect>
       </ImageView>
-      <ImageView fitHeight="200.0" fitWidth="300.0" layoutX="369.0" layoutY="238.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="200.0" fitWidth="300.0" layoutX="369.0" layoutY="223.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/level1.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="200.0" fitWidth="300.0" layoutX="370.0" layoutY="372.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="200.0" fitWidth="300.0" layoutX="370.0" layoutY="328.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/level2.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="200.0" fitWidth="300.0" layoutX="368.0" layoutY="504.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="200.0" fitWidth="300.0" layoutX="368.0" layoutY="431.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/level3.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="471.0" layoutY="596.0" mnemonicParsing="false" onAction="#goBackToMainMenu" prefHeight="39.0" prefWidth="99.0" stylesheets="@setButtonStyle.css" text="Back" />
+      <ImageView fx:id="shade" fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/transition.png" />
          </image>
       </ImageView>
    </children>
