--- a/Project Files/src/FXMLs/confirmExit.fxml
+++ b/Project Files/src/FXMLs/confirmExit.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.GaussianBlur?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.EnterNameController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.ConfirmExitController">
    <children>
       <ImageView fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -17,9 +16,9 @@
             <GaussianBlur radius="32.28" />
          </effect>
       </ImageView>
-      <ImageView fitHeight="149.0" fitWidth="419.0" layoutX="302.0" layoutY="324.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="149.0" fitWidth="419.0" layoutX="319.0" layoutY="316.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../images/enterName.png" />
+            <Image url="@../images/sureexit.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="107.0" fitWidth="527.0" layoutX="256.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true">
@@ -27,9 +26,8 @@
             <Image url="@../images/logo2.png" />
          </image>
       </ImageView>
-      <Button layoutX="451.0" layoutY="492.0" mnemonicParsing="false" onAction="#goToMainMenu" prefHeight="44.0" prefWidth="121.0" stylesheets="@setButtonStyle.css" text="Submit" />
-      <TextField layoutX="421.0" layoutY="389.0" prefHeight="26.0" prefWidth="192.0" styleClass="text-field" stylesheets="@setButtonStyle.css" />
-      <Button layoutX="451.0" layoutY="560.0" mnemonicParsing="false" onAction="#goBackToLogin" prefHeight="44.0" prefWidth="121.0" stylesheets="@setButtonStyle.css" text="Back" />
+      <Button layoutX="425.0" layoutY="470.0" mnemonicParsing="false" onAction="#exitGame" prefHeight="35.0" prefWidth="90.0" stylesheets="@setButtonStyle.css" text="Yes" />
+      <Button layoutX="541.0" layoutY="470.0" mnemonicParsing="false" onAction="#goBackToLogin" prefHeight="35.0" prefWidth="90.0" stylesheets="@setButtonStyle.css" text="No" />
       <ImageView fx:id="shade" fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/transition.png" />
