--- a/Project Files/src/FXMLs/confirmLogOut.fxml
+++ b/Project Files/src/FXMLs/confirmLogOut.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.EnterNameController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.ConfirmLogOutController">
    <children>
       <ImageView fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -18,7 +18,7 @@
       </ImageView>
       <ImageView fitHeight="149.0" fitWidth="419.0" layoutX="319.0" layoutY="316.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../images/sureexit.png" />
+            <Image url="@../images/sureLogOut.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="107.0" fitWidth="527.0" layoutX="256.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true">
@@ -26,7 +26,12 @@
             <Image url="@../images/logo2.png" />
          </image>
       </ImageView>
-      <Button layoutX="430.0" layoutY="402.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="90.0" stylesheets="@setButtonStyle.css" text="YES" />
-      <Button layoutX="546.0" layoutY="402.0" mnemonicParsing="false" onAction="#goBackToLogin" prefHeight="35.0" prefWidth="90.0" stylesheets="@setButtonStyle.css" text="NO" />
+      <Button layoutX="425.0" layoutY="470.0" mnemonicParsing="false" onAction="#goToChoosePlayerMenu" prefHeight="35.0" prefWidth="90.0" stylesheets="@setButtonStyle.css" text="Yes" />
+      <Button layoutX="541.0" layoutY="470.0" mnemonicParsing="false" onAction="#goBackToMainMenu" prefHeight="35.0" prefWidth="90.0" stylesheets="@setButtonStyle.css" text="No" />
+      <ImageView fx:id="shade" fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/transition.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
