--- a/Project Files/src/FXMLs/highScore.fxml
+++ b/Project Files/src/FXMLs/highScore.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.effect.GaussianBlur?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.HighScore">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.HighScoreController">
    <children>
       <ImageView fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -80,5 +81,6 @@
             <Image url="@../images/s1.png" />
          </image>
       </ImageView>
+      <Button layoutX="470.0" layoutY="639.0" mnemonicParsing="false" onAction="#goBackToMainMenu" prefHeight="34.0" prefWidth="89.0" stylesheets="@setButtonStyle.css" text="Back" />
    </children>
 </AnchorPane>
