--- a/Project Files/src/FXMLs/mainMenu.fxml
+++ b/Project Files/src/FXMLs/mainMenu.fxml
@@ -5,13 +5,8 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.SelectPlayerMenuController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.mainMenuController">
    <children>
-      <ImageView fx:id="shade" blendMode="MULTIPLY" fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/transition.png" />
-         </image>
-      </ImageView>
       <ImageView fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/bgLogin.jpg" />
@@ -25,29 +20,39 @@
             <Image url="@../images/logo2.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="existingPlayer" fitHeight="100.0" fitWidth="400.0" layoutX="318.0" layoutY="368.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#enterPlayerName" pickOnBounds="true" scaleY="2.0">
+      <ImageView fx:id="loadGame" fitHeight="54.0" fitWidth="345.0" layoutX="347.0" layoutY="330.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" scaleY="2.0">
          <image>
-            <Image url="@../images/selectPlayer_B.png" />
+            <Image url="@../images/loadGame.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="playGuest" fitHeight="100.0" fitWidth="400.0" layoutX="318.0" layoutY="469.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" scaleY="2.0">
+      <ImageView fx:id="chooseLevel" fitHeight="55.0" fitWidth="345.0" layoutX="346.0" layoutY="419.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#chooseLevel" pickOnBounds="true" scaleY="2.0">
          <image>
-            <Image url="@../images/playGuest_B.png" />
+            <Image url="@../images/chooseLevel.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="newPlayer" fitHeight="100.0" fitWidth="400.0" layoutX="318.0" layoutY="574.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#enterPlayerName" pickOnBounds="true" scaleY="2.0">
+      <ImageView fx:id="settings" fitHeight="53.0" fitWidth="345.0" layoutX="346.0" layoutY="508.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" scaleY="2.0">
          <image>
-            <Image url="@../images/createPlayer_B.png" />
+            <Image url="@../images/settings.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="exitButton" fitHeight="100.0" fitWidth="400.0" layoutX="318.0" layoutY="670.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#endGame" pickOnBounds="true" scaleY="2.0">
+      <ImageView fx:id="highScores" fitHeight="53.0" fitWidth="345.0" layoutX="347.0" layoutY="598.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#showHighscores" pickOnBounds="true" scaleY="2.0">
          <image>
-            <Image url="@../images/exitGame_B.png" />
+            <Image url="@../images/highScores.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="playGuest1" fitHeight="190.0" fitWidth="395.0" layoutX="318.0" layoutY="222.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true">
+      <ImageView fx:id="startGame" fitHeight="106.0" fitWidth="345.0" layoutX="346.0" layoutY="216.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true">
          <image>
-            <Image url="@../images/playGuest_B.png" />
+            <Image url="@../images/startGame.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="logOut" fitHeight="106.0" fitWidth="345.0" layoutX="347.0" layoutY="657.0" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#logOut" pickOnBounds="true">
+         <image>
+            <Image url="@../images/logOut.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="shade" blendMode="MULTIPLY" fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/transition.png" />
          </image>
       </ImageView>
    </children>
