--- a/Project Files/src/FXMLs/houseAndLawn.fxml
+++ b/Project Files/src/FXMLs/houseAndLawn.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="769.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.HouseAndLawnController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.HouseAndLawnController">
    <children>
-      <ImageView fitHeight="780.0" fitWidth="1024.0" layoutY="99.0" pickOnBounds="true" preserveRatio="true" scaleY="1.007">
+      <ImageView fitHeight="768.0" fitWidth="1024.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true" scaleY="1.007">
          <image>
             <Image url="@../images/lawn.jpg" />
          </image>
@@ -29,9 +29,9 @@
             <Image url="@../images/sun_counter.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="103.0" fitWidth="126.0" layoutX="64.0" layoutY="169.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="90.0" fitWidth="90.0" layoutX="87.0" layoutY="212.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../Downloads/204-2042121_lawn-mower-png-download-honda-push-mower-clipart.png" />
+            <Image url="@../images/lawnMower.png" />
          </image>
       </ImageView>
       <GridPane layoutX="156.0" layoutY="214.0" prefHeight="542.0" prefWidth="790.0">
@@ -122,24 +122,29 @@
             <Image url="@../images/active_peashooter.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="103.0" fitWidth="126.0" layoutX="64.0" layoutY="269.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="90.0" fitWidth="90.0" layoutX="87.0" layoutY="315.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../Downloads/204-2042121_lawn-mower-png-download-honda-push-mower-clipart.png" />
+            <Image url="@../images/lawnMower.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="103.0" fitWidth="126.0" layoutX="64.0" layoutY="382.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="90.0" fitWidth="90.0" layoutX="86.0" layoutY="425.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../Downloads/204-2042121_lawn-mower-png-download-honda-push-mower-clipart.png" />
+            <Image url="@../images/lawnMower.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="103.0" fitWidth="126.0" layoutX="56.0" layoutY="487.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="90.0" fitWidth="90.0" layoutX="79.0" layoutY="532.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../Downloads/204-2042121_lawn-mower-png-download-honda-push-mower-clipart.png" />
+            <Image url="@../images/lawnMower.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="103.0" fitWidth="126.0" layoutX="64.0" layoutY="601.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="90.0" fitWidth="90.0" layoutX="68.0" layoutY="643.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../Downloads/204-2042121_lawn-mower-png-download-honda-push-mower-clipart.png" />
+            <Image url="@../images/lawnMower.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="shade" fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/transition.png" />
          </image>
       </ImageView>
    </children>
