--- a/Project Files/src/FXMLs/houseAndLawn.fxml
+++ b/Project Files/src/FXMLs/houseAndLawn.fxml
@@ -6,9 +6,16 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="animationLayer" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.HouseAndLawnController">
    <children>
+      <ImageView fx:id="shade" fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/transition.png" />
+         </image>
+      </ImageView>
       <ImageView fitHeight="768.0" fitWidth="1024.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true" scaleY="1.007">
          <image>
             <Image url="@../images/lawn.jpg" />
@@ -169,10 +176,15 @@
             <Image url="@../images/Pea.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="shade" fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/transition.png" />
-         </image>
-      </ImageView>
+      <Text fx:id="countDown" fill="RED" layoutX="322.0" layoutY="67.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="3.0" text="00" textAlignment="CENTER" wrappingWidth="305.9999999999999">
+         <font>
+            <Font name="Impact" size="51.0" />
+         </font>
+      </Text>
+      <Text layoutX="219.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="250">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
