--- a/Project Files/src/FXMLs/houseAndLawn.fxml
+++ b/Project Files/src/FXMLs/houseAndLawn.fxml
@@ -41,9 +41,9 @@
             <Image url="@../images/sun_counter.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="90.0" fitWidth="90.0" layoutX="81.0" layoutY="212.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="lawnMower1" fitHeight="90.0" fitWidth="90.0" layoutX="81.0" layoutY="209.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../images/lawnMower.png" />
+            <Image url="@../images/lawn_mower.gif" />
          </image>
       </ImageView>
       <GridPane fx:id="gardenGRID" alignment="CENTER_RIGHT" layoutX="152.0" layoutY="186.0" prefHeight="542.0" prefWidth="806.0">
@@ -116,46 +116,37 @@
             <ImageView fitHeight="78.0" fitWidth="85.0" onDragDropped="#manageDragDrop" onDragOver="#manageDragOver" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
          </children>
       </GridPane>
-      <ImageView fitHeight="99.0" fitWidth="95.0" layoutX="929.0" onDragDetected="#manageDragDetected" onDragDone="#manageDragDone" onMouseDragged="#makeDark" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" preserveRatio="true" scaleY="1.02">
-         <image>
-            <Image url="@../images/active_beetroot.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="99.0" fitWidth="95.0" layoutX="834.0" onDragDetected="#manageDragDetected" onDragDone="#manageDragDone" onMouseDragged="#makeDark" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" preserveRatio="true" scaleY="1.02">
-         <image>
-            <Image url="@../images/active_walnut.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="99.0" fitWidth="95.0" layoutX="739.0" onDragDetected="#manageDragDetected" onDragDone="#manageDragDone" onMouseDragged="#makeDark" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" preserveRatio="true" scaleY="1.02">
+      <ImageView fitHeight="99.0" fitWidth="95.0" layoutX="929.0" layoutY="1.0" onDragDetected="#manageDragDetected" onDragDone="#manageDragDone" onMouseDragged="#makeDark" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" preserveRatio="true" scaleY="1.02">
          <image>
             <Image url="@../images/active_sunflower.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="99.0" fitWidth="95.0" layoutX="644.0" onDragDetected="#manageDragDetected" onDragDone="#manageDragDone" onMouseDragged="#makeDark" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" preserveRatio="true" scaleY="1.02">
+      <ImageView fitHeight="98.0" fitWidth="95.0" layoutX="834.0" layoutY="1.0" onDragDetected="#manageDragDetected" onDragDone="#manageDragDone" onMouseDragged="#makeDark" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" preserveRatio="true" scaleY="1.02">
          <image>
             <Image url="@../images/active_peashooter.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="90.0" fitWidth="90.0" layoutX="81.0" layoutY="315.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/lawnMower.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="90.0" fitWidth="90.0" layoutX="80.0" layoutY="425.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/lawnMower.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="90.0" fitWidth="90.0" layoutX="73.0" layoutY="532.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/lawnMower.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="lawnMower5" fitHeight="90.0" fitWidth="90.0" layoutX="62.0" layoutY="643.0" onMouseClicked="#testLawnMower" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="lawnMower2" fitHeight="90.0" fitWidth="90.0" layoutX="83.0" layoutY="308.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/lawn_mower.gif" />
          </image>
       </ImageView>
+      <ImageView fx:id="lawnMower3" fitHeight="90.0" fitWidth="90.0" layoutX="80.0" layoutY="426.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/lawn_mower.gif" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="lawnMower4" fitHeight="90.0" fitWidth="90.0" layoutX="73.0" layoutY="527.0" onMouseClicked="#testLawnMower" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/lawn_mower.gif" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="lawnMower5" fitHeight="90.0" fitWidth="90.0" layoutX="62.0" layoutY="639.0" onMouseClicked="#testLawnMower" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/lawn_mower.gif" />
+         </image>
+      </ImageView>
+      
       <Text fx:id="countDown" fill="RED" layoutX="322.0" layoutY="67.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="3.0" text="00" textAlignment="CENTER" wrappingWidth="305.9999999999999">
          <font>
             <Font name="Impact" size="51.0" />
