--- a/Project Files/src/FXMLs/houseAndLawn3.fxml
+++ b/Project Files/src/FXMLs/houseAndLawn3.fxml
@@ -116,14 +116,14 @@
                 <ImageView fitHeight="78.0" fitWidth="85.0" onDragDropped="#manageDragDrop" onDragOver="#manageDragOver" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
             </children>
         </GridPane>
-        <ImageView fitHeight="99.0" fitWidth="95.0" layoutX="834.0" layoutY="1.0" onDragDetected="#manageDragDetected" onDragDone="#manageDragDone" onMouseDragged="#makeDark" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" preserveRatio="true" scaleY="1.02">
+        <ImageView fx:id="walNut" fitHeight="99.0" fitWidth="95.0" layoutX="834.0" layoutY="1.0" onDragDetected="#manageDragDetected" onDragDone="#manageDragDone" onMouseDragged="#makeDark" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" preserveRatio="true" scaleY="1.02">
             <image>
                 <Image url="@../images/inactive_walnut.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="98.0" fitWidth="95.0" layoutX="644.0" layoutY="1.0" onDragDetected="#manageDragDetected" onDragDone="#manageDragDone" onMouseDragged="#makeDark" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" preserveRatio="true" scaleY="1.02">
+        <ImageView fx:id="peaShooter" fitHeight="98.0" fitWidth="95.0" layoutX="644.0" layoutY="1.0" onDragDetected="#manageDragDetected" onDragDone="#manageDragDone" onMouseDragged="#makeDark" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" preserveRatio="true" scaleY="1.02">
             <image>
-                <Image url="@../images/active_peashooter.png" />
+                <Image url="@../images/inactive_peashooter.png" />
             </image>
         </ImageView>
         <ImageView fx:id="lawnMower2" fitHeight="90.0" fitWidth="90.0" layoutX="83.0" layoutY="308.0" pickOnBounds="true" preserveRatio="true">
@@ -136,12 +136,12 @@
                 <Image url="@../images/lawn_mower.gif" />
             </image>
         </ImageView>
-        <ImageView fx:id="lawnMower4" fitHeight="90.0" fitWidth="90.0" layoutX="73.0" layoutY="527.0" onMouseClicked="#testLawnMower" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="lawnMower4" fitHeight="90.0" fitWidth="90.0" layoutX="73.0" layoutY="527.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/lawn_mower.gif" />
             </image>
         </ImageView>
-        <ImageView fx:id="lawnMower5" fitHeight="90.0" fitWidth="90.0" layoutX="62.0" layoutY="639.0" onMouseClicked="#testLawnMower" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="lawnMower5" fitHeight="90.0" fitWidth="90.0" layoutX="62.0" layoutY="639.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/lawn_mower.gif" />
             </image>
@@ -162,12 +162,12 @@
                 <Image url="@../images/shovel.png" />
             </image>
         </ImageView>
-      <ImageView fitHeight="99.0" fitWidth="95.0" layoutX="739.0" layoutY="1.0" onDragDetected="#manageDragDetected" onDragDone="#manageDragDone" onMouseDragged="#makeDark" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" preserveRatio="true" scaleY="1.02">
+      <ImageView fx:id="sunFlower" fitHeight="99.0" fitWidth="95.0" layoutX="739.0" layoutY="1.0" onDragDetected="#manageDragDetected" onDragDone="#manageDragDone" onMouseDragged="#makeDark" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" preserveRatio="true" scaleY="1.02">
          <image>
             <Image url="@../images/inactive_sunflower.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="99.0" fitWidth="95.0" layoutX="929.0" layoutY="1.0" onDragDetected="#manageDragDetected" onDragDone="#manageDragDone" onMouseDragged="#makeDark" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" preserveRatio="true" scaleY="1.02">
+      <ImageView fx:id="beetRoot" fitHeight="99.0" fitWidth="95.0" layoutX="929.0" layoutY="1.0" onDragDetected="#manageDragDetected" onDragDone="#manageDragDone" onMouseDragged="#makeDark" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" onMouseReleased="#removeEffect" pickOnBounds="true" preserveRatio="true" scaleY="1.02">
          <image>
             <Image url="@../images/inactive_beetroot.png" />
          </image>
