--- a/Project Files/src/FXMLs/houseAndLawn.fxml
+++ b/Project Files/src/FXMLs/houseAndLawn.fxml
@@ -136,12 +136,12 @@
             <Image url="@../images/lawn_mower.gif" />
          </image>
       </ImageView>
-      <ImageView fx:id="lawnMower4" fitHeight="90.0" fitWidth="90.0" layoutX="73.0" layoutY="527.0" onMouseClicked="#testLawnMower" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="lawnMower4" fitHeight="90.0" fitWidth="90.0" layoutX="73.0" layoutY="527.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/lawn_mower.gif" />
          </image>
       </ImageView>
-      <ImageView fx:id="lawnMower5" fitHeight="90.0" fitWidth="90.0" layoutX="62.0" layoutY="639.0" onMouseClicked="#testLawnMower" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="lawnMower5" fitHeight="90.0" fitWidth="90.0" layoutX="62.0" layoutY="639.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/lawn_mower.gif" />
          </image>
