Implemented game lose

--- a/Project Files/src/FXMLs/houseAndLawn3.fxml
+++ b/Project Files/src/FXMLs/houseAndLawn3.fxml
@@ -11,16 +11,6 @@
 
 <AnchorPane fx:id="animationLayer" maxHeight="768.0" maxWidth="1024.0" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.HouseAndLawn3Controller">
     <children>
-        <ImageView fx:id="shade" fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../images/transition.png" />
-            </image>
-        </ImageView>
-        <ImageView fx:id="shade" fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../images/transition.png" />
-            </image>
-        </ImageView>
         <ImageView fitHeight="768.0" fitWidth="1024.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true" scaleY="1.007">
             <image>
                 <Image url="@../images/lawn.jpg" />
@@ -172,5 +162,11 @@
             <Image url="@../images/inactive_beetroot.png" />
          </image>
       </ImageView>
+      <ImageView fx:id="house" fitHeight="618.0" fitWidth="88.0" layoutX="10.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true" />
+        <ImageView fx:id="shade" fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../images/transition.png" />
+            </image>
+        </ImageView>
     </children>
 </AnchorPane>
