--- a/Project Files/src/FXMLs/enterNameCreate.fxml
+++ b/Project Files/src/FXMLs/enterNameCreate.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.EnterNameController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.EnterNameCreateController">
    <children>
       <ImageView fx:id="shade" fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -32,7 +32,7 @@
             <Image url="@../images/logo2.png" />
          </image>
       </ImageView>
-      <Button layoutX="451.0" layoutY="492.0" mnemonicParsing="false" onAction="#goToMainMenu" prefHeight="44.0" prefWidth="121.0" stylesheets="@setButtonStyle.css" text="Submit" />
+      <Button layoutX="451.0" layoutY="492.0" mnemonicParsing="false" onAction="#goToMainMenu" prefHeight="44.0" prefWidth="121.0" stylesheets="@setButtonStyle.css" text="Create" />
       <TextField fx:id="nameText" layoutX="421.0" layoutY="389.0" prefHeight="26.0" prefWidth="192.0" styleClass="text-field" stylesheets="@setButtonStyle.css" />
       <Button layoutX="451.0" layoutY="560.0" mnemonicParsing="false" onAction="#goBackToLogin" prefHeight="44.0" prefWidth="121.0" stylesheets="@setButtonStyle.css" text="Back" />
    </children>
