--- a/Project Files/src/FXMLs/savedGames.fxml
+++ b/Project Files/src/FXMLs/savedGames.fxml
@@ -9,6 +9,11 @@
 
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.SavedGamesController">
    <children>
+      <ImageView fx:id="shade" fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/transition.png" />
+         </image>
+      </ImageView>
       <ImageView fitHeight="768.0" fitWidth="1024.0">
          <image>
             <Image url="@../images/Levelbg.png" />
@@ -27,24 +32,19 @@
       </ImageView>
       <ImageView fx:id="saveGame1" fitHeight="200.0" fitWidth="300.0" layoutX="369.0" layoutY="223.0" onMouseClicked="#sGame1" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../images/level1.png" />
+            <Image url="@../images/Game1.png" />
          </image>
       </ImageView>
       <ImageView fx:id="saveGame2" fitHeight="200.0" fitWidth="300.0" layoutX="370.0" layoutY="328.0" onMouseClicked="#sGame2" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../images/level2.png" />
+            <Image url="@../images/Game2.png" />
          </image>
       </ImageView>
       <ImageView fx:id="saveGame3" fitHeight="200.0" fitWidth="300.0" layoutX="368.0" layoutY="431.0" onMouseClicked="#sGame3" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../images/level3.png" />
+            <Image url="@../images/Game3.png" />
          </image>
       </ImageView>
       <Button layoutX="471.0" layoutY="596.0" mnemonicParsing="false" onAction="#goBackToMainMenu" prefHeight="39.0" prefWidth="99.0" stylesheets="@setButtonStyle.css" text="Back" />
-      <ImageView fx:id="shade" fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/transition.png" />
-         </image>
-      </ImageView>
    </children>
 </AnchorPane>
