--- a/Project Files/src/FXMLs/Level.fxml
+++ b/Project Files/src/FXMLs/Level.fxml
@@ -9,6 +9,11 @@
 
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.LevelController">
    <children>
+      <ImageView fx:id="shade" fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/transition.png" />
+         </image>
+      </ImageView>
       <ImageView fitHeight="768.0" fitWidth="1024.0">
          <image>
             <Image url="@../images/Levelbg.png" />
@@ -25,25 +30,30 @@
             <Blend />
          </effect>
       </ImageView>
-      <ImageView fitHeight="200.0" fitWidth="300.0" layoutX="369.0" layoutY="223.0" onMouseClicked="#level1" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="level1" fitHeight="200.0" fitWidth="300.0" layoutX="369.0" layoutY="135.0" onMouseClicked="#level1" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/level1.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="200.0" fitWidth="300.0" layoutX="370.0" layoutY="328.0" onMouseClicked="#level2" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="level2" fitHeight="200.0" fitWidth="300.0" layoutX="370.0" layoutY="235.0" onMouseClicked="#level2" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/level2.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="200.0" fitWidth="300.0" layoutX="368.0" layoutY="431.0" onMouseClicked="#level3" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="level3" fitHeight="200.0" fitWidth="300.0" layoutX="368.0" layoutY="333.0" onMouseClicked="#level3" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/level3.png" />
          </image>
       </ImageView>
-      <Button layoutX="471.0" layoutY="596.0" mnemonicParsing="false" onAction="#goBackToMainMenu" prefHeight="39.0" prefWidth="99.0" stylesheets="@setButtonStyle.css" text="Back" />
-      <ImageView fx:id="shade" fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
+      <Button layoutX="470.0" layoutY="648.0" mnemonicParsing="false" onAction="#goBackToMainMenu" prefHeight="39.0" prefWidth="99.0" stylesheets="@setButtonStyle.css" text="Back" />
+      <ImageView fx:id="level4" fitHeight="200.0" fitWidth="300.0" layoutX="370.0" layoutY="434.0" onMouseClicked="#level3" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../images/transition.png" />
+            <Image url="@../images/level4.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="level5" fitHeight="200.0" fitWidth="300.0" layoutX="370.0" layoutY="532.0" onMouseClicked="#level3" onMouseEntered="#makeGlow" onMouseExited="#removeEffect" onMousePressed="#makeDark" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/level5.png" />
          </image>
       </ImageView>
    </children>
