--- a/Project Files/src/FXMLs/UserNotFound.fxml
+++ b/Project Files/src/FXMLs/UserNotFound.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="786.0" maxWidth="1024.0" prefHeight="786.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.UserNotFound">
+<AnchorPane maxHeight="786.0" maxWidth="1024.0" prefHeight="786.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLs.UserNotFoundController">
    <children>
       <ImageView fitHeight="788.0" fitWidth="1024.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" scaleY="1.06">
          <image>
@@ -23,6 +23,11 @@
       <ImageView fitHeight="166.0" fitWidth="466.0" layoutX="281.0" layoutY="131.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/logo2.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="shade" fitHeight="786.0" fitWidth="1024.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true">
+         <image>
+            <Image url="@../images/transition.png" />
          </image>
       </ImageView>
    </children>
